tests/positive/binary_operations_typical.em
int main() {
    bool b = 1 < 2;
    return b ? 1 : 0;
}