tests/negative/break_complex.em
int func() {
    break;
    return 0;
}
int main() {
    return func();
}